# scout-aptos

detectors/: Cargo.toml
detectors/index_in_result/: Cargo.toml
detectors/index_in_result/src/: lib.rs
detectors/unwrap_or_expect_in_result/: Cargo.toml
